_src/_includes/_assets/css/core.css
/*core*/

::view-transition-old(root),
::view-transition-new(root) {
  animation-duration: 0.5s;
}

:root, [data-theme='light'] {
  --light: #c9c9c9;
  --input: #f0f0f0;
  --dark: #333333;
  --bright: #ffffff;
  --text: #333333;
  --background: #ffffff;
  --blue: #0077b37a;
  --orange: #ff4500;
  --orange-opacity: #ff45009c;
  --blood-orange: #ce3800;
  --main-red: #c30000;
  --brand-background: #ffffff;
  --brand-text: #333333;
  --main-blue: #0283bd;
  --main-green: #15B007;
  --subtle-bg: #f1f1f1;
  /** CSS DARK THEME PRIMARY COLORS */
  --color-primary-100: #ff4500;
  --color-primary-200: #ff6028;
  --color-primary-300: #ff7743;
  --color-primary-400: #ff8c5d;
  --color-primary-500: #ffa077;
  --color-primary-600: #ffb491;
  /** CSS DARK THEME SURFACE COLORS */
  --color-surface-100: #121212;
  --color-surface-200: #282828;
  --color-surface-300: #3f3f3f;
  --color-surface-400: #575757;
  --color-surface-500: #717171;
  --color-surface-600: #8b8b8b;
}

[data-theme="dark"] {
  --light: #2d2d2d;
  --input: #333333;
  --dark: #292929;
  --bright: #ffffff;
  --text: #cfcfcf;
  --blood-orange: #9d2d03;
  --background: #000000;
  --blue: #0077b33b;
  --brand-background: #00284d;
  --brand-text: #cfcfcf;
  --orange-opacity: #ff450066;
  --subtle-bg: #242424;
}

@media (prefers-color-scheme: dark) {
  :root {
    --light: #2d2d2d;
    --input: #333333;
    --dark: #292929;
    --bright: #ffffff;
    --text: #cfcfcf;
    --blood-orange: #9d2d03;
    --background: #000000;
    --blue: #0077b33b;
    --brand-background: #00284d;
    --brand-text: #cfcfcf;
    --orange-opacity: #ff450066;
  }

  [data-theme='light'] {
    --light: #c9c9c9;
    --input: #f0f0f0;
    --dark: #333333;
    --bright: #ffffff;
    --text: #333333;
    --background: #ffffff;
    --blue: #0077b37a;
    --orange: #ff4500;
    --orange-opacity: #ff45009c;
    --blood-orange: #ce3800;
    --brand-background: #ffffff;
    --brand-text: #333333;
    --main-blue: #0283bd;
    --main-green: #15B007;
  }
}

html {
  scroll-behavior: smooth;
}

body {
  font-size: 20px;
  font-family: 'Open Sans', sans-serif;
  font-weight: 400;
  font-display: fallback;
  color: var(--text);
  margin: 0;
  background-color: var(--background);
}

img, object, svg { max-width: 100%; display: block;}

content img { border-radius: 5px; }

.image-inline-text {
  width: 20px;
  margin: 0!important;
  display: inline-block;
  padding: 0;
  margin-bottom: -2px!important;
}

.material-symbols-outlined {
  font-size: inherit;
  font-variation-settings:
  'FILL' 0,
  'wght' 600,
  'GRAD' 0,
  'opsz' 24;
  vertical-align: middle;
}

#navbar .material-symbols-outlined {
  font-size: 120%;
  vertical-align: middle;
}

.meta-tiny .material-symbols-outlined {
  font-size: 110%;
}

.post-meta-base-right .material-symbols-outlined {
  vertical-align: middle;
}

.breadcrumb {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: flex;
  flex-flow: row-reverse wrap-reverse;
  flex-wrap: wrap-reverse;

  & li {
    display: inline;
    padding-right: 4px;
  }

  & .end-icon {

    & .material-symbols-outlined {
      transform: rotate(90deg);
    }
    
  }
}

audio { width: 80%; min-width: 300px; }

h1, h2, h3, h4, h5, h6 {
  font-weight: 500;
  padding: 0;
}

h3, h4, h5, h6 {
  font-weight: 400;
}

h2 { font-size: 36px; }
h3 { font-size: 30px; }
h4 { font-size: 24px; }
h5 { font-size: 20px; }

:is(h1, h2, h3, h4, h5) a {
  text-decoration: none;
  border-bottom: none;
}

:is(article :is(h1, h2, h3, h4, h5, h6)) a::after {
  content: "\f13d";
  font-size: 17px;
  vertical-align: super;
  padding-left: 10px;
  font-family: 'Font Awesome 5 Pro';
  cursor: pointer;
  display: none;
  transition: all 0.2s ease;
}

:is(article :is(h1, h2, h3, h4, h5, h6)) a:hover {
  all: unset;
}

:is(article :is(h1, h2, h3, h4, h5, h6)) a:hover::after {
  display: inherit;
  transition: all 0.2s ease;
}

blockquote {
  padding: 20px 20px 20px 60px;
  margin: 20px 0;
  border-radius: 5px;
  position: relative;
  border: 4px solid var(--orange);
}

blockquote::before{
  content: "\201C";
  font-size:4em;
  position: absolute;
  left: 20px;
  top:-10px;
  color: var(--orange);
}

blockquote::after{
  content: '';
}

.label {
  font-size: 70%;
  padding: 0 3px;
  background: var(--light);
  border-radius: 5px;
  text-wrap: nowrap;

  &.label-sup {
    vertical-align: text-top;
    vertical-align: super;
  }

  &.label-green {
    background: var(--main-green);
    color: white;
  }

  &.label-orange {
    background: var(--orange);
    color: white;
  }

  &.label-main-blue {
    background: var(--main-blue);
    color: white;
  }

  &.label-blue {
    background: var(--blue);
    color: white;
  }

  & .material-symbols-outlined {
    font-size: 130%;
    padding: 0 0 2px 2px;
  }
}

a {
  color: inherit;
  text-underline-offset: 2px;
}

a.active {
  color: var(--blood-orange);
}

.aside-section ul li a.active {
  color: var(--blood-orange);
}

a:hover {
  opacity: 0.8;
}

.text-orange {
  color: var(--orange)
}

.text-blue {
  color: var(--blue);
}

.text-red {
  color: var(--main-red);
}

.text-align-center {
  text-align: center;
}

.text-align-right {
  text-align: right;
}

.text-align-left {
  text-align: left;
}

hr {
    margin-top: 20px;
    margin-bottom: 20px;
    border: 0;
    border-top: 1px solid var(--text);
}

*:focus {
  outline: 0;
}

cite {
  display: block;
  padding-top: 10px;
  font-size: 15px;
  color: #929292;
}

code {
  font-family: monospace;
  overflow-wrap: anywhere;
  overflow-x: scroll;
  color: var(--blood-orange);
}

pre {
  font-family: monospace;
  padding: 16px;
  overflow-wrap: anywhere;
  overflow-x: scroll;
  background-color: var(--subtle-bg);
  border-radius: 5px;
  color: var(--orange);
}

pre code {
  color: var(--orange);
  border: none;
  padding: 0;
}
/* ... */

